--- a/app/src/main/res/layout/activity_find_search.xml
+++ b/app/src/main/res/layout/activity_find_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,18 +21,11 @@
             android:background="@null"
             android:id="@+id/search_edit"
             android:paddingLeft="15dp"
-            android:hint="搜索你感兴趣的专题,用户，资源  "
+            android:hint="搜索你感兴趣的专题,用户,资源"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"/>
 
-        <ImageView
-            android:paddingRight="5dp"
-            android:layout_gravity="center"
-            android:src="@drawable/search_green"
-            android:id="@+id/search_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
         <ImageView
             android:layout_marginRight="5dp"
             android:id="@+id/camera_search"
@@ -41,18 +34,11 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-
-
     </LinearLayout>
-    <com.google.android.flexbox.FlexboxLayout
-        android:id="@+id/flexsubject_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:flexWrap="wrap"/>
 
     <RelativeLayout
-        android:id="@+id/content"
+        android:id="@+id/content_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></RelativeLayout>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
