--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,50 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.common.video.PlayActivity">
 
     <com.tencent.rtmp.ui.TXCloudVideoView
-        android:background="@drawable/masaike"
+        android:background="@color/colorPrimary"
         android:id="@+id/live_play"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible"/>
-    <Button
-        android:layout_marginLeft="5dp"
-        android:background="@color/colorAccent"
-        android:text="销毁播放"
-        android:id="@+id/stop_play"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"/>
-    <Button
-        android:background="@color/colorAccent"
-        android:text="暂停播放"
-        android:id="@+id/pause_stop"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/stop_play"/>
-    <Button
-        android:background="@color/colorAccent"
 
-        android:id="@+id/again_play"
-        android:text="继续播放"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/pause_stop"/>
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_centerInParent="true"
+        app:srcCompat = "@drawable/anim_path"
+        android:layout_width="150dp"
+        android:layout_height="150dp" />
+
     <Button
-        android:background="@color/colorAccent"
-        android:text="硬件加速"
-        android:id="@+id/jiasu"
+        android:id="@+id/change_state"
+        android:background="@drawable/ic_play_circle_outline_black_24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="20dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp" />
+
+    <Button
+        android:id="@+id/screen_shot"
+        android:background="@drawable/ic_filter_center_focus_black_24dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="20dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp" />
+
+    <ImageView
+        android:id="@+id/snap"
+        android:src="@mipmap/ic_launcher"
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/again_play"
-        android:layout_alignTop="@+id/again_play"/>
+        android:layout_height="100dp" />
 </RelativeLayout>
