--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -8,34 +8,6 @@
     android:background="@color/colorBg"
     tools:context="androidlab.edu.cn.nucyixue.ui.mePack.MeFragment">
 
-    <!--<android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_me"
-            app:titleTextColor="@color/colorWhite"
-            android:title="@string/me_fragment_title"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
-            &lt;!&ndash;<RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:textStyle="bold"
-                    android:text="我"
-                    android:textColor="#FFFF"
-                    android:id="@+id/toolbar_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
-                    android:singleLine="true"
-                    android:textSize="20sp" />
-            </RelativeLayout>&ndash;&gt;
-
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>-->
-
     <ScrollView
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
@@ -45,10 +17,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <RelativeLayout
-                android:background="#ffffff"
+                android:background="@color/colorPrimary"
                 android:paddingTop="10dp"
+                android:paddingBottom="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="110dp">
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:src="@drawable/hold"
                     android:id="@+id/me_image_avatar"
@@ -63,7 +36,7 @@
                     android:textSize="26sp"
                     android:layout_toEndOf="@+id/me_image_avatar"
                     android:layout_marginStart="20dp"
-                    android:textColor="#000000"
+                    android:textColor="@color/white"
                     android:maxLines="1"
                     android:layout_width="200dp"
                     android:layout_height="30dp"/>
@@ -71,6 +44,7 @@
                 <TextView
                     android:id="@+id/me_major"
                     android:gravity="center|left"
+                    android:textColor="@color/white"
                     android:textSize="15sp"
                     android:layout_width="200dp"
                     android:layout_height="25dp"
@@ -88,7 +62,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:background="#ffffff"
+                android:background="@color/colorPrimary"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
                 <LinearLayout
@@ -101,13 +75,13 @@
                     android:layout_height="50dp">
                     <TextView
                         android:id="@+id/live_num"
-                        android:textColor="#696868"
+                        android:textColor="@color/white"
                         android:gravity="center"
                         android:text="0"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <TextView
-                        android:textColor="#000000"
+                        android:textColor="@color/white"
                         android:textSize="18sp"
                         android:gravity="center"
                         android:text="Live"
@@ -124,14 +98,14 @@
                     android:layout_width="55dp"
                     android:layout_height="50dp">
                     <TextView
-                        android:textColor="#696868"
+                        android:textColor="@color/white"
                         android:gravity="center"
                         android:text="0"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:textColor="#000000"
+                        android:textColor="@color/white"
                         android:textSize="18sp"
                         android:gravity="center"
                         android:text="视频"
@@ -149,13 +123,13 @@
                     android:layout_width="55dp"
                     android:layout_height="50dp">
                     <TextView
-                        android:textColor="#696868"
+                        android:textColor="@color/white"
                         android:gravity="center"
                         android:text="0"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <TextView
-                        android:textColor="#000000"
+                        android:textColor="@color/white"
                         android:textSize="18sp"
                         android:gravity="center"
                         android:text="线下"
@@ -173,7 +147,7 @@
                     android:layout_width="55dp"
                     android:layout_height="50dp">
                     <TextView
-                        android:textColor="#696868"
+                        android:textColor="@color/white"
                         android:gravity="center"
                         android:text="0"
                         android:layout_width="match_parent"
@@ -185,14 +159,13 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="回答"
-                        android:textColor="#000000"
+                        android:textColor="@color/white"
                         android:textSize="18sp"/>
 
 
                 </LinearLayout>
                 <LinearLayout
                     android:layout_weight="1"
-
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginBottom="10dp"
@@ -200,13 +173,13 @@
                     android:layout_width="55dp"
                     android:layout_height="50dp">
                     <TextView
-                        android:textColor="#696868"
+                        android:textColor="@color/white"
                         android:gravity="center"
                         android:text="0"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <TextView
-                        android:textColor="#000000"
+                        android:textColor="@color/white"
                         android:textSize="18sp"
                         android:gravity="center"
                         android:text="悬赏"
