--- a/app/src/main/res/layout/item_live.xml
+++ b/app/src/main/res/layout/item_live.xml
@@ -91,6 +91,15 @@
             </LinearLayout>
         </RelativeLayout>
 
+
+        <ImageView
+            android:id="@+id/live_format"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_edit_black_24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
